<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/travelItemFromToLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/travelItemTxtSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/travelItemTxtSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/trip_separator" />

            <TextView
                android:id="@+id/travelItemTxtDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/travelItemInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/travelItemImgTransportType"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:contentDescription="@string/travel_item_transport_type_content_description"
                android:src="@drawable/ic_transport_type_car" />

            <TextView
                android:id="@+id/travelItemDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/travelItemTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/travelItemPoiInfo"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_margin="2dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/travel_item_poi_information"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/travelItemImgRating"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="right|center_vertical"
        android:layout_margin="2dp"
        android:contentDescription="@string/travel_item_rating_image_content_description"
        android:src="@drawable/ic_action_not_important" />

</LinearLayout>